move ng directive to body tag

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
-  <body>
-    <div ng-app="" ng-init="message = 'Hello World'">
+  <body ng-app="">
+    <div ng-init="message = 'Hello World'">
       <h1>{{message}}</h1>
     </div>
   </body>
