--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
   <body ng-app="">
-    <div ng-init="message = 'Hello World'">
-      <h1>{{message}}</h1>
-    </div>
+    <input type="text" ng-model="name" ng-model="name" placeholder='Give me a name'>
+      <h1 ng-if="name">Hello {{name}}!</h1>
   </body>
 </html>
