make angular tags valid HTML

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
-  <body ng-app="">
-    <input type="text" ng-model="name" ng-model="name" placeholder='Give me a name'>
-      <h1 ng-if="name">Hello {{name}}!</h1>
+  <body data-ng-app="">
+    <input type="text" data-ng-model="name" placeholder='Give me a name'>
+      <h1 data-ng-if="name">Hello {{name}}!</h1>
   </body>
 </html>
