--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body data-ng-app="">
     <input type="text" data-ng-model="name" placeholder='Give me a name'>
-      <h1 data-ng-if="name">Hello {{name}}!</h1>
+      <h1 data-ng-if="name">Hello {{name}} {{5+5}}!</h1>
   </body>
 </html>
