--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   </head>
   <body data-ng-app="">
     <input type="text" data-ng-model="name" placeholder='Give me a name'>
-      <h1 data-ng-if="name">Hello {{name}} {{5+5}}!</h1>
+    <h1 data-ng-if="name">Hello {{name}} {{5+5}}!</h1>
+    <script type="text/javascript">
+      var demoApp = angular.module("demoApp", []);
+
+      demoApp.controller("mainController", function ($scope)) {
+        $scope.firstName ="Betty";
+        $scope.lastName = "Boop"
+      });
+    </script>
   </body>
 </html>
