--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
-  <body data-ng-app="">
-    <input type="text" data-ng-model="name" placeholder='Give me a name'>
-    <h1 data-ng-if="name">Hello {{name}} {{5+5}}!</h1>
+  <body data-ng-app="demoApp" data-ng-controller="mainController">
+    <h1>{{['Hello', firstName, lastName].join(' ')}}! {{2+5}}!</h1>
     <script type="text/javascript">
       var demoApp = angular.module("demoApp", []);
 
