correct missing semicolon and faulty setup of controller

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script type="text/javascript">
       var demoApp = angular.module("demoApp", []);
 
-      demoApp.controller("mainController", function ($scope)) {
+      demoApp.controller("mainController", function ($scope) {
         $scope.firstName ="Betty";
-        $scope.lastName = "Boop"
+        $scope.lastName = "Boop";
       });
     </script>
   </body>
