--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           template: "<h1>{{[message, firstName, lastName].join(' ')}}! {{3+5}}!</h1>"
         };
       });
+
+      demoApp.service(user)
     </script>
   </body>
 </html>
