correct missing commas in array

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       demoApp.service('userService', function(){
          var collection = [
-             {firstName: 'Betty', lastName: 'Boop'}
-             {firstName: 'Donald', lastName: 'Paul'}
+             {firstName: 'Betty', lastName: 'Boop'},
+             {firstName: 'Donald', lastName: 'Paul'},
              {firstName: 'Jessica', lastName: 'Rabbit'}
          ];
          return {
