--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           link: function ($scope, element, attrs) {
             $scope.message = attrs.message;
           },
-          template: "<h1>{{[message, firstName, lastName].join(' ')}}! {{3+5}}!</h1>"
+          template: "<h1>{{[message, user.firstName, user.lastName].join(' ')}}! {{3+5}}!</h1>"
         };
       });
 
