--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="js/app.module.js"></script>
+    <script src="js/app.controller.js"></script>
+    <script src="js/app.directive.js"></script>
+    <script src="js/app.service.js"></script>
+    <script src="js/app.filter.js"></script>
   </head>
   <body data-ng-app="demoApp" data-ng-controller="mainController">
     <form data-ng-submit="addUser()">
@@ -13,11 +17,5 @@
     </form>
   
     <div data-ng-repeat="user in users | sortByFirstName"><say-hello message="Tervetuola! "></say-hello></div>
-    
-    <script type="text/javascript">
-
-
-
-    </script>
   </body>
 </html>
